# r3LAY

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_BLINK_PR.md  CURSOR_OPTIMIZATION_COMPLETE.md  Dockerfile  Dockerfile.nvidia  Makefile  README.md  SECURITY.md  SESSION_NOTES.md  STREAM-A-COMPLETION.md  capture-screenshot.sh  docker-compose.yaml  gitignore  install.sh  pr-121-validation-report.md  pyproject.toml  r3lay-config.template.yaml  r3lay-testing-findings.md  r3lay-ui-consolidated-plan.md
.claude/agents/: backend-llm-rag.md  r3lay-architect.md  research-engineer.md  tui-frontend-engineer.md
.github/ISSUE_TEMPLATE/: -other--template.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
.r3lay/: project.yaml
axioms/: axioms.yaml
data/obd2/: codes-universal.json
docs/: API.md  ARCHITECTURE.md  AUTOMOTIVE_MODULE_DESIGN.md  CURSOR_BLINK_OPTIMIZATION.md  DESIGN.md  EQUIPMENT.md  INTENT-ARCHITECTURE.md  KNOWLEDGE_SYSTEMS.md  PHASE2-PROJECT-TRACKER.md  docker.md  openclaw-integration.md  troubleshooting.md  user-config.md
docs/automotive/: AUTOMOTIVE_AXIOMS.md  INTEGRATION_PLAN.md  MAINTENANCE_SCHEMA.md  PROTOTYPE_INDEXING.md  README.md  SESSION_4_SUMMARY.md  TEST_QUERIES.md  VALIDATION_QUERIES.md  diagnostic-flowcharts.md  obd2-codes-p0xxx.md  quick-reference.md  ssm1-protocol-evoscan.md  subaru-p1xxx-codes.md
docs/examples/: flowchart-no-start.yaml  obd2-sample-database.json
hdls/agent-configs/: README.md  hyph4-reference.yaml
hermes-profile/: .env.template  SOUL.md  config.template.yaml
hermes-profile/skins/: r3lay.yaml
launchd/: com.r3lay.services.plist  install.sh  r3lay-attach.sh  r3lay-up.fish  r3lay-up.sh
plans/: 2026-01-02_phase2-model-discovery.md  2026-01-04_phase4-completion.md  2026-01-04_phases-5-8-roadmap.md  future_dashboard-and-project-hub.md
r3lay/: __init__.py  app.py  banner.py  banner_info.sh  bridge.py  cache.py  cli.py  compile.py  config.py  conflict.py  db.py  decisions.py  doctor.py  ingest.py  maintenance.py  mcp_server.py  pipeline.py  pr_workflow.py  privacy.py  project_files.py  r3  rebuild.py  search.py  session_notes.py  sync.py  versioning.py
r3lay/backends/: __init__.py  base.py  llamacpp.py  mlx.py  mlx_worker.py  ollama.py  vllm.py
r3lay/core/: __init__.py  axioms.py  contradiction_monitor.py  index.py  maintenance.py  models.py  project.py  project_config.py  project_context.py  reranker.py  reranker_worker.py  research.py  router.py  search.py  searxng.py  session.py  signals.py  sources.py  vault.py  vector_store.py  welcome.py
reviews/: PR-122-code.md  PR-122-security.md
schema/: dtc-database.schema.json  schema.sql  vehicle-profile.schema.json
scripts/: check-version-sync.sh  index_automotive_docs.py  openclaw_processor.py
searxng/: settings.yml
starting_docs/: CLAUDE.md  IMPLEMENTATION_PLAN.md  __init__.py  app.py  config.py  r3lay-architecture.md  r3lay-implementation-plan.md
tests/: __init__.py  conftest.py  test_adaptive_retrieval.py  test_app.py  test_app_extended.py  test_axioms.py  test_backends_init.py  test_backends_llamacpp.py  test_backends_mlx.py  test_backends_ollama.py  test_backends_openclaw.py  test_backends_vllm.py  test_bridge.py  test_cache.py  test_cli.py  test_config.py  test_contradiction_monitor.py  test_core_init.py  test_db.py  test_decisions.py  test_doctor.py  test_embeddings.py  test_embeddings_vision.py  test_index.py  test_ingest.py  test_maintenance.py  test_mcp_server.py  test_mlx_workers.py  test_models.py  test_pipeline.py  test_project.py  test_project_context.py  test_rebuild.py  test_reranker.py  test_research.py  test_research_extended.py  test_router.py  test_search.py  test_searxng.py  test_session.py  (+5 more)
(+128 files in other folders)
