[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r3lay"
version = "2.0.0"
description = "r3LAY: local-first personal project brain"
requires-python = ">=3.11"
license = {text = "PolyForm-Noncommercial-1.0.0"}

dependencies = [
    "httpx>=0.27.0",
    "ruamel.yaml>=0.18.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "watchdog>=4.0.0",
    "spacy>=3.7.0",
    "numpy>=1.26.0",
    "sqlite-vec>=0.1.6",
    "mcp>=1.27.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
mlx = ["mlx>=0.5.0", "mlx-lm>=0.5.0"]
llamacpp = ["llama-cpp-python>=0.2.0"]
nli = ["sentence-transformers>=3.0.0"]

[project.scripts]
r3lay-serve = "r3lay.bridge:main"
r3lay-watch = "r3lay.sync:main"
r3lay-index = "r3lay.ingest:main"
r3lay-mcp = "r3lay.mcp_server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
